# ESCAI

./: .env.example  .gitignore  .pre-commit-config.yaml  .pypirc  ANALYTICS_IMPLEMENTATION_SUMMARY.md  API_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_RESEARCH_EXAMPLES.md  CODEBASE_INDEX.md  CONFIG_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  ESCAI Framework_ Detailed AI IDE-Friendly Implemen.md  FLAKE8_FIXES_SUMMARY.md  FLAKE8_RESOLUTION_SUMMARY.md  INSTALLATION.md  LICENSE  MANIFEST.in  MYPY_CRITICAL_PIPELINE_FIXES.md  MYPY_FIXES_PROGRESS.md  MYPY_FIXES_SUMMARY.md  PIPELINE_TEST.md  PYTHON_311_FOCUS_STATUS.md  PYTHON_VERSION_SIMPLIFICATION.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TESTING.md  TRYSOL_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  alembic.ini  analytics_demo.py  comprehensive_test_report.json  docker-compose.yml  erg sbergsgvergxawrga  errors.md  escai_export_20250911_165807.json  escai_export_20250911_175352.json  (+21 more)
.github/: SECURITY_SECRETS_GUIDE.md
.github/workflows/: ci-cd.yml
.kiro/hooks/: agent-log-analyzer.kiro.hook
config/: .master_key  config.development.yaml  config.example.yaml
dev/: README.md
dev/scripts/: workflow_cleanup.py
docker/mongo/: init.js
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md
docs/cli/: comprehensive-guide.md  documentation-system.md  final-status-report.md  issues-rectified-summary.md  task-18-completion-summary.md  validation-system.md
docs/configuration/: README.md
docs/deployment/: README.md  github-actions-setup.md  quick-start.md
docs/examples/: README.md
docs/integration/: README.md  autogen.md  framework-robustness.md  langchain.md
docs/performance/: README.md
docs/publication/: contemporary-citations.md
docs/security/: README.md  best-practices.md
docs/troubleshooting/: README.md  framework-integration.md
escai_framework/: __init__.py
escai_framework/analytics/: __init__.py  failure_analysis.py  model_evaluation.py  pattern_mining.py  prediction_models.py  statistical_analysis.py
escai_framework/api/: __init__.py  analysis.py  auth.py  auth_endpoints.py  main.py  middleware.py  monitoring.py  security_middleware.py  websocket.py
escai_framework/cli/: __init__.py  main.py  session_storage.py
escai_framework/config/: __init__.py  config_encryption.py  config_manager.py  config_schema.py  config_templates.py  config_validator.py  config_versioning.py
escai_framework/core/: __init__.py  causal_engine.py  epistemic_extractor.py  explanation_engine.py  pattern_analyzer.py  performance_predictor.py
escai_framework/github_cicd/: __init__.py  commit_manager.py  constants.py  error_handler.py  github_mcp_client.py  interfaces.py  models.py  rollback_manager.py  rollback_manager_temp.py  status_monitor.py  utils.py  workflow_manager.py
escai_framework/instrumentation/: __init__.py  adaptive_sampling.py  autogen_instrumentor.py  base_instrumentor.py  crewai_instrumentor.py  event_stream.py  events.py  framework_compatibility.py  langchain_instrumentor.py  log_processor.py  openai_instrumentor.py  robust_instrumentor.py
escai_framework/models/: __init__.py  behavioral_pattern.py  causal_relationship.py  epistemic_state.py  prediction_result.py
escai_framework/security/: __init__.py  audit_logger.py  auth_manager.py  config.py  input_validator.py  pii_detector.py  rbac.py  tls_manager.py
escai_framework/storage/: __init__.py  base.py  database.py  influx_dashboard.py  influx_manager.py  influx_models.py  models.py  mongo_manager.py  mongo_models.py  neo4j_analytics.py  neo4j_manager.py  neo4j_models.py  redis_manager.py
escai_framework/utils/: __init__.py  circuit_breaker.py  error_tracking.py  exceptions.py  fallback.py  load_shedding.py  logging.py  retry.py  serialization.py  validation.py
escai_framework/visualization/: __init__.py
examples/: README.md  __init__.py  basic_usage.py  causal_analysis_example.py  cli_comprehensive_example.py  cli_documentation_example.py  cli_error_handling_example.py  cli_validation_example.py  config_management_demo.py  error_handling_example.py  explanation_engine_example.py  framework_integration_example.py  github_cicd_basic_example.py  github_cicd_commit_manager_example.py  github_cicd_status_monitor_example.py  influxdb_storage_example.py  mongodb_storage_example.py  neo4j_storage_example.py  performance_prediction_example.py  postgresql_storage_example.py  publication_with_contemporary_citations.py  redis_storage_example.py  security_example.py  websocket_example.py
helm/escai/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
k8s/: configmap.yaml  escai-api.yaml  namespace.yaml  postgres.yaml
k8s/security/: network-policies.yaml  rbac.yaml
scripts/: run_tests.py  test-deployment.py  validate-deployment.py  validate_cli_integration.py  validate_cli_integration_windows.py  validate_imports.py
tests/: CLI_TEST_SUITE_SUMMARY.md  README.md  __init__.py  cli_test_runner.py  conftest.py  conftest_cli.py  run_comprehensive_tests.py
tests/accessibility/: test_cli_accessibility.py
tests/accuracy/: __init__.py  test_basic_accuracy.py  test_ml_model_accuracy.py
tests/documentation/: test_cli_documentation_quality.py
tests/e2e/: __init__.py  test_basic_workflow.py  test_cli_workflows.py  test_complete_workflows.py
tests/integration/: test_api_endpoints.py  test_autogen_instrumentor.py  test_causal_engine_integration.py  test_cli_enhancements.py  test_cli_framework_integration.py  test_cli_integration.py  test_config_integration.py  test_crewai_instrumentor.py  test_error_handling_integration.py  test_framework_robustness.py  test_influxdb_storage.py  test_langchain_instrumentor.py  test_mongodb_storage.py  test_neo4j_storage.py  test_openai_instrumentor.py  test_postgresql_storage.py  test_redis_storage.py  test_security_integration.py  (+2 more)
(+132 files in other folders)
