[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escai-framework"
version = "0.2.0"
description = "Real-time observability system for monitoring autonomous agent cognition, behavior analysis, and performance prediction"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "ESCAI Framework Team"}
]
keywords = [
    "ai", "agents", "monitoring", "observability", "cognition", 
    "autonomous-agents", "behavioral-analysis", "causal-inference", 
    "performance-prediction", "epistemic-states", "langchain", 
    "autogen", "crewai", "openai-assistants"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    # Core processing (minimal for basic functionality)
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    
    # CLI dependencies
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
    "httpx>=0.24.0,<1.0.0",
    
    # Utilities
    "python-dateutil>=2.8.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    
    # Configuration and validation
    "pydantic>=1.10.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-html>=3.2.0,<4.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "coverage>=7.3.0,<8.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "psutil>=5.9.0,<6.0.0",
]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "bandit>=1.7.5,<2.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    # Type stubs
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "types-aiofiles",
    "pandas-stubs",
]

# Extended dependencies for full functionality
full = [
    # Core processing and ML
    "scikit-learn>=1.1.0,<2.0.0",
    "xgboost>=1.7.0,<3.0.0",
    "networkx>=3.0,<4.0.0",
    "scipy>=1.9.0,<2.0.0",
    "statsmodels>=0.13.0,<1.0.0",
    
    # NLP & AI
    "transformers>=4.21.0,<5.0.0",
    "nltk>=3.8,<4.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "torch>=2.0.0,<3.0.0",
    
    # API & Communication
    "fastapi>=0.100.0,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "websockets>=11.0,<12.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "fastapi-limiter>=0.1.5,<1.0.0",
    
    # Storage & Databases
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.12.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "pymongo>=4.5.0,<5.0.0",
    "motor>=3.3.0,<4.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "asyncpg>=0.28.0,<1.0.0",
    "influxdb-client>=1.38.0,<2.0.0",
    "neo4j>=5.14.0,<6.0.0",
    
    # Visualization
    "plotly>=5.15.0,<6.0.0",
    "streamlit>=1.25.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    
    # Security and utilities
    "python-multipart>=0.0.6,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "watchdog>=3.0.0,<4.0.0",
    
    # Causal inference and specialized analytics
    "dowhy>=0.8.0,<1.0.0",
    "river>=0.21.0,<1.0.0",
    "prefixspan>=0.5.2,<1.0.0",
    "joblib>=1.3.0,<2.0.0",
]

[project.scripts]
escai = "escai_framework.cli.main:main"

[project.urls]
Homepage = "https://github.com/Sonlux/ESCAI"
Documentation = "https://sonlux.github.io/ESCAI"
Repository = "https://github.com/Sonlux/ESCAI"
"Bug Tracker" = "https://github.com/Sonlux/ESCAI/issues"

[tool.setuptools]
# Explicitly enable package discovery
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["escai_framework*"]
exclude = ["tests*", "docs*", "examples*", "*.tests*", "*.tests"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config --tb=short --timeout=30"
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "performance: Performance tests",
    "load: Load tests",
    "accuracy: Accuracy validation tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "requires_db: Tests that require database connection",
    "requires_network: Tests that require network access"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["escai_framework"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false